[package]
name = "dmt"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shell_completion = "0.0.2"

[dev-dependencies]
serial_test = "2.0.0"
tokio = { version = "1.29.1", features = ["rt", "macros"] }
